syntax = "proto3";
package lavanet.lava.pairing;

option go_package = "github.com/lavanet/lava/v3/x/pairing/types";

import "lavanet/lava/pairing/relay.proto";
import "lavanet/lava/pairing/query.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";
import "lavanet/lava/epochstorage/stake_entry.proto";
import "lavanet/lava/spec/spec.proto";

service BadgeGenerator {
  rpc GenerateBadge(GenerateBadgeRequest) returns (GenerateBadgeResponse) {}
}

message GenerateBadgeRequest {
  string badge_address = 1;
  string project_id = 2;
  string spec_id = 3 [(gogoproto.nullable)   = true];
}

message GenerateBadgeResponse {
  Badge badge = 1; 
  QueryGetPairingResponse get_pairing_response = 2;
  string badge_signer_address = 3;
  lavanet.lava.spec.Spec spec = 4;
}
